--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -123,7 +123,7 @@
   margin-top: 14px;
   height: 50px;
   width: 100%;
-  color: #fff;
+  color: var(--color-text-intense);
   font-weight: 600;
   border-radius: var(--btn-radius);
   box-shadow: var(--box-shadow);
