--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -29,7 +29,7 @@
   --grad-end: #ff4d84;
   --grad-alt: #e86ede;
 
-  --color-btn-login: #ef9a80;
+  --color-btn-login: #f8ac94;
 
   --brand: #9c2f21;
   /* texto del filled */
