cambiar colores actividades

--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -20,9 +20,9 @@
   --btn-bg-color-intense: #f49587;
   --btn-text-light: #fff;
 
-  --color-act-pronto: #f7f59a;
-  --color-act-pasada: #f7a3a3;
-  --color-act-futura: #c1faa7;
+  --color-act-pronto: #fefedc;
+  --color-act-pasada: #fcd7d7;
+  --color-act-futura: #e8ffde;
 
   /* gradiantes olas */
   --grad-start: #ee622a;
