--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -116,13 +116,12 @@
 .WelcomePage-btn--white {
   background: white;
   color: var(--brand);
-  border-color: white;
-  box-shadow: 0 4px 2px white;
+  border-color: #f1f1f1;
+  box-shadow: 0 4px 2px #f1f1f1;
 }
 
 .WelcomePage-btn--white:hover {
   background: #f1f1f1;
-  border-color: #f1f1f1;
 }
 
 .WelcomePage-btn--white:active {
