--- a/front-tourist-activities/src/css/pages/policy.css
+++ b/front-tourist-activities/src/css/pages/policy.css
@@ -56,9 +56,11 @@
   transition: background-color 1s ease-in-out, transform 0.3s ease-in-out;
 }
 
-.PoliticaPriv-link:hover {
+.PoliticaPriv-link:hover,
+.TerminosCondiciones-link:hover {
   background-color: var(--btn-bg-color-intense);
 }
-.PoliticaPriv-link:focus {
+.PoliticaPriv-link:focus,
+.TerminosCondiciones-link:focus {
   transform: scale(0.8);
 }
