añadir skeleton ajustado al tamaño de actividades con un div

--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -385,6 +385,15 @@
   width: 100%;
 }
 
+.Activity-skeleton,
+.Activities-act {
+  border-radius: 20px;
+  padding: 0.8rem;
+  margin: 8px 0;
+  width: 350px;
+  height: 150px;
+}
+
 .Activities-act {
   position: relative;
   display: flex;
@@ -392,12 +401,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   background-color: var(--box-activities);
-  border-radius: 20px;
-  padding: 0.8rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  margin: 8px 0;
-  width: 350px;
-  height: 150px;
 }
 
 .Activities-icondiv {
