--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -59,8 +59,17 @@
   fill-opacity: 0.18;
   /* translúcido, para dejar ver el gradiente de detrás y queda sensación de ola */
 }
+.Profile-wrapperSkeleton {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .Profile-card {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -70,11 +79,25 @@
   background-color: var(--color-bg);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
   width: 100%;
+  width: 420px;
   max-width: 420px;
   height: auto;
   min-height: 550px;
   /* overflow-y: auto; */
   transition: box-shadow 0.3s ease-in-out;
+}
+
+.Profile-skeleton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+  width: 100%;
+  height: 550px;
+  max-width: 420px;
+  border-radius: 16px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
 }
 
 .Profile-card:hover {
