--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -140,6 +140,16 @@ html {
   align-items: center;
 }
 
+.SkeletonWrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+  border-radius: 16px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
+}
+
 .Error {
   position: absolute;
   top: 0;
