añadir css login demoText

--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -57,7 +57,7 @@
   justify-content: center;
 }
 
-.Login-demmoText {
+.Login-demoText {
   font-size: 0.875rem;
   color: #666;
   margin-bottom: 0.85rem;
