--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -1,3 +1,13 @@
+.Login-fadeIn {
+  opacity: 0;
+  animation: fadeIn 0.3s ease-in;
+}
+
+@keyframes fadein {
+  to {
+    opacity: 1;
+  }
+}
 .Login,
 .Register {
   display: flex;
