ajustar btns de editar perfil a disabled en cuenta demo

--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -359,7 +359,7 @@
 
 .ActividadSeleccionada-btn--edit {
   background-color: #5c6ab4;
-  color: var(--white);
+  color: white;
 }
 
 .ActividadSeleccionada-btn--edit:hover {
