ajustar colores hover btns cambiar perfil disabled

--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -179,10 +179,12 @@
 .Profile-button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+  background-color: var(--btn-bg-color);
 }
 
 .Profile-button:disabled:hover {
   transform: none;
+  background-color: var(--btn-bg-color);
   box-shadow: none;
 }
 
