--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -17,6 +17,7 @@
   position: relative;
   /*overflow: hidden;*/
   /* background-color: #f4f6f8; */
+  background-color: #f9b2a7b8;
 }
 
 .Profile-bg {
