--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -56,6 +56,7 @@
 .WelcomePage-subtitle {
   margin-top: 30px;
   text-align: center;
+  max-width: 460px;
   font-size: 1.2rem;
   color: var(--color-text-p);
   font-family: var(--font-main);
@@ -106,7 +107,9 @@
   padding: 12px 18px;
   border-radius: 14px;
   border: 2px solid transparent;
-  transition: background-color 0.2s ease-out, color 0.2s ease-out;
+  transition:
+    background-color 0.2s ease-out,
+    color 0.2s ease-out;
 }
 
 .WelcomePage-btn:focus-visible {
