--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -90,7 +90,7 @@
 
 .WelcomePage-actions {
   position: absolute;
-  bottom: 64px;
+  bottom: 84px;
   right: 50%;
   transform: translateX(50%);
   display: flex;
@@ -149,6 +149,8 @@
   bottom: 2px;
   left: 50%;
   transform: translateX(-50%);
+  text-align: center;
+  text-wrap: balance;
 }
 
 @media (min-width: 768px) {
@@ -187,7 +189,6 @@
 @media (max-width: 900px) {
   .Welcome-credenciales {
     width: 360px;
-    text-align: center;
   }
 
   .WelcomePage-actions {
