ajustar tamaños img y poner un fallback de tamaños de carga

--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -21,9 +21,11 @@
 }
 
 .WelcomePage-img {
+  width: 100%;
   height: 280px;
   min-height: 100px;
-  width: auto;
+  object-fit: contain;
+  display: block;
 }
 
 .WelcomePage-description {
