--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -382,6 +382,11 @@
   /* background: #4b5bb2; */
 }
 
+.react-calendar__tile--hasActive:enabled:hover,
+.react-calendar__tile--hasActive:enabled:focus {
+  background: #e57373;
+}
+
 @media (min-width: 768px) {
   .CalendarForm {
     width: 700px;
