--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -382,8 +382,16 @@
   /* background: #4b5bb2; */
 }
 
+.react-calendar__tile--active {
+  background: #e57373;
+}
+
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
+  background: #e57373;
+}
+
+.react-calendar__tile--hasActive {
   background: #e57373;
 }
 
