--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -382,16 +382,7 @@
   /* background: #4b5bb2; */
 }
 
-.react-calendar__tile--active {
-  background: #e57373;
-}
-
-.react-calendar__tile--active:enabled:hover,
-.react-calendar__tile--active:enabled:focus {
-  background: #e57373;
-}
-
-.react-calendar__tile--hasActive {
+.react-calendar__tile.react-calendar__tile--now.react-calendar__tile--hasActive.react-calendar__year-view__months__month {
   background: #e57373;
 }
 
