--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -377,14 +377,25 @@
 }
 
 /* personalizacion calendario */
+
+.react-calendar {
+  background-color: #fdf3eb;
+}
 .react-calendar__tile--hasActive {
   color: white;
   /* background: #4b5bb2; */
 }
 
-.react-calendar__tile.react-calendar__tile--now.react-calendar__tile--hasActive.react-calendar__year-view__months__month {
+.react-calendar__year-view__months
+  .react-calendar__tile--hasActive:enabled:hover,
+.react-calendar__year-view__months
+  .react-calendar__tile--hasActive:enabled:focus {
   background: #e57373;
 }
+
+/* .react-calendar__tile.react-calendar__tile--now.react-calendar__tile--hasActive.react-calendar__year-view__months__month {
+  background: #e57373;
+} */
 
 @media (min-width: 768px) {
   .CalendarForm {
