--- a/front-tourist-activities/src/css/components/footer.css
+++ b/front-tourist-activities/src/css/components/footer.css
@@ -2,10 +2,10 @@
 
 .Footer {
   position: fixed;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 10;
   display: flex;
   border-radius: 50px 50px 0 0;
   justify-content: space-around;
@@ -66,7 +66,9 @@
   cursor: pointer;
   border: 2px solid var(--color-text-intense);
   box-shadow: 0 6px 4px var(--color-text-intense);
-  transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+  transition:
+    transform 0.5s ease-in-out,
+    box-shadow 0.5s ease-in-out;
 }
 
 .Footer-divBtn:hover {
